Dark mode button bug fixes

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -81,10 +81,10 @@ border: 1px solid #dbdbdb;
 #main-container {
     display: flex;
     column-gap: 2%;
+    justify-content: center;
 }
 
 #left-hand-pane {
-    margin-left: 20%;
 }
 
 
@@ -92,7 +92,6 @@ border: 1px solid #dbdbdb;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-right: 20%;
 }
 
 p {
@@ -158,9 +157,12 @@ margin: 0;
     height: 500px;
     width: 500px;
     border-radius: 16px;
+}
 
-
-
+@media (max-width: 650px) {
+#main-container {
+  flex-direction: column;
+}
 }
 
 
